# Artificial-Intelligence-Projects

ai_projects/citation-guardrail-engine/: .env.example  .gitignore  NOTES.md  README.md  eval.py  golden_set.json  requirements.txt
ai_projects/citation-guardrail-engine/app/: config.py  main.py  models.py  rules.py
ai_projects/citation-guardrail-engine/app/matchers/: keyword.py  semantic.py
ai_projects/citation-guardrail-engine/tests/: conftest.py  test_integration.py  test_keyword_matcher.py  test_rules.py  test_semantic_matcher.py
ai_projects/llm-conversational-bi-assistant/: README.md  docker-compose.yml
ai_projects/llm-conversational-bi-assistant/data/: seed_database.py  staffing.db
ai_projects/llm-conversational-bi-assistant/data/documents/: faq_benefits.md  policy_data_privacy.md  sop_timesheet.md
ai_projects/llm-conversational-bi-assistant/src/: README.md  api.py  config.py  utils.py
ai_projects/llm-conversational-bi-assistant/src/cache/: semantic_cache.py
ai_projects/llm-conversational-bi-assistant/tests/: test_router.py
citation-guardrail-engine/: TECHNICAL_TEST_CITATION_GUARDRAIL.md  eval_test_output.txt
llm-conversational-bi-assistant/: Dockerfile  pyproject.toml  requirements.txt
llm-conversational-bi-assistant/data/: user_permissions.json
llm-conversational-bi-assistant/data/documents/: policy_contractor.md  sop_onboarding.md
llm-conversational-bi-assistant/src/: main.py
llm-conversational-bi-assistant/src/agent/: rag_agent.py  router.py  sql_agent.py
llm-conversational-bi-assistant/src/security/: rls.py
llm-conversational-bi-assistant/tests/: conftest.py  test_cache.py  test_rls.py
