[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "conversational-bi-assistant"
version = "0.1.0"
description = "Conversational BI Assistant with Text-to-SQL, RAG, RLS and Semantic Cache"
requires-python = ">=3.10"
readme = "README.md"

dependencies = [
    # LLM
    "openai>=1.30.0",

    # Vector store & embeddings
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",

    # Web framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",

    # Config & validation
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",

    # Utilities
    "tabulate>=0.9.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "types-tabulate",
]

[project.scripts]
bi-assistant = "src.main:cli_entrypoint"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_ignores = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=70 -v"

[tool.coverage.run]
omit = [
    # Modules that depend on live LLM/network calls — covered by integration tests
    "src/agent/sql_agent.py",
    "src/agent/rag_agent.py",
    "src/api.py",
    "src/main.py",
    "src/utils.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
